# heroku-buildpack-nodejs

./: .ackrc  .editorconfig  .gitignore  .gitmodules  .shellcheckrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  SECURITY.md  VALIDATION_NOTES.md  app.json  buildpack.toml  concurrency  experiments  features  go.mod  go.sum  hatchet.json  makefile  npmrc  عزوز_هيلب
.circle/: config.yml
.circleci/: config.yml
.git2gus/: config.json
.github/: CODEOWNERS  dependabot.yml
.profile.d/: nodejs.sh
.sclng/: metadata.toml
ci-profile/: nodejs.sh
conf/: cloudControl-env.properties
etc/: cgroups.sh  ci-cleanup.sh  ci-setup.sh  coverage_lexer.rb  coverage_lexer_test.rb  generate-coverage-report  generate-coverage-report-test.rb  hatchet.sh  measure-coverage-overhead  publish.sh
inventory/: node.toml  yarn.toml
lib/: _failures.sh  binaries.sh  build-data.sh  build.sh  builddata.sh  cache.sh  common.sh  concurrency.sh  coverage.sh  dependencies.sh  environment.sh  experiments.sh  failure.sh  failures.sh  features.sh  json.sh  kvstore.sh  memusg.sh  metadata.sh  monitor.sh  npm.sh  output.sh  plugin.sh  pnpm.sh  support_status.sh  test.sh  uuid.sh  warnings.sh  yaml.sh  yarn-2.sh  yarn2.sh
metrics/: metrics_collector.cjs
nodejs-data-query/: Cargo.toml
nodejs-data-query/src/: main.rs
plugin/: download.sh  heroku-nodejs-plugin-node-10.sha512  heroku-nodejs-plugin-node-11.sha512  heroku-nodejs-plugin-node-12.sha512  heroku-nodejs-plugin-node-13.sha512  heroku-nodejs-plugin-node-14.sha512  heroku-nodejs-plugin-node-15.sha512  heroku-nodejs-plugin-node-16.sha512  heroku-nodejs-plugin-node-17.sha512  heroku-nodejs-plugin-node-18.sha512  heroku-nodejs-plugin-node-19.sha512  heroku-nodejs-plugin-node-20.sha512  version  (+3 more)
resolve-version/: Cargo.toml
resolve-version/src/: main.rs
(+557 files in other folders)
