[package]
name = "resolve-version"
rust-version = "1.89"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
hex = "0.4"
libherokubuildpack = { version = "=0.30.2", default-features = false, features = [
    "inventory",
    "inventory-sha2",
] }
node-semver = "2"
sha2 = "0.10.9"
toml = "0.9"
