[package]
name = "resolve-version"
rust-version = "1.96"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
hex = "0.4"
libherokubuildpack = { version = "=0.31.0", default-features = false, features = [
    "inventory",
    "inventory-sha2",
] }
nodejs-data = { git = "https://github.com/heroku/buildpacks-nodejs", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
